--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Live Dealer</title>
+    <title>Delivery Routing Problem</title>
     <link rel="shortcut icon" type="image/png" href="src/assets/img/Shoutout_logo.png" />
     <link rel="manifest" href="img/manifest.json" />
     <link rel="apple-touch-icon" href="img/48px.png">
